# better-code-2024

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: 1_hello_world.rs  2_blinky.rs  3_mtimer.rs  4_button.rs  5_slic.rs  6_rtic.rs
src/: main.rs
